# Server

./: .gitignore  CMakeLists.txt  CommonLib.pro
Company/: CMakeLists.txt  client.cpp  clientlist.cpp  eql_config.cpp  net.cpp  web_interface_eqw.cpp  worlddb.cpp  zoneserver.cpp
common/: Android.mk  CMakeLists.txt  common.pro  crc32.cpp  database_conversions.cpp  emu_oplist.h  eqemu_logsys.h  faction.h  gamefeatures.h  login_structures.h  misc.cpp  opcodemgr.cpp  servertalk.h
common/net/: eqstream.h
libs/: Android.mk  libs.pro
libs/cereal/cereal/: cereal.hpp  stringExt.h
libs/cereal/cereal/archives/: binary.hpp
libs/format/fmt/: format.h
loginserver/: CMakeLists.txt  client.cpp  client_manager.cpp  client_manager.h  server_manager.cpp
loginserver/login_util/: EQEmuLoginServerDBInstall.sql  login.ini
shared_memory/: base_data.cpp  main.cpp  skill_caps.cpp  spells.cpp
simpleRPGserver/: CMakeLists.txt  client.cpp  client.h  client_manager.cpp  client_manager.h  config.h  login_server.h  main.cpp  options.h  world_server.cpp
simpleRPGserver/login_util/: login.ini
utils/: eqemu_config.xml
world/: net.cpp
zone/: client.cpp  command.cpp  embparser.cpp  embparser_api.cpp  embperl.cpp  entity.cpp  exp.cpp  mob_ai.cpp  net.cpp  npc.cpp  perl_client.cpp  perl_doors.cpp  perl_entity.cpp  perl_groups.cpp  perl_hateentry.cpp  perl_mob.cpp  perl_npc.cpp  perl_object.cpp  perl_perlpacket.cpp  perl_player_corpse.cpp  perl_questitem.cpp  perl_raids.cpp  quest_parser_collection.cpp  tribute.cpp  waypoints.cpp  zone.cpp
